  (#1818)
- Fixed Transformation type protocol.
  (PR #1805, PR #1832)
- Documented to_preferred and created added an autoautoconvert_to_preferred registry option.
  (PR #1803)
- Enable Pint to parse uncertainty numbers.
  (See #1611, #1614)
- Optimize matplotlib unit conversion for Quantity arrays
  (PR #1819)
- Add numpy.linalg.norm implementation.
  (PR #1251)

0.22 (2023-05-25)
-----------------

- Drop Python 3.8 compatability following NEP-29.
- Drop NumPy < 1.21 following NEP-29.
- Improved typing experience.
- Migrated fully to pyproject.toml.
- Migrated to ruff.
- In order to make static typing possible as required by mypy
  and similar tools, the way to subclass the registry has been
  changed.
- Allow non-quantity atol parameters for isclose and allclose.
  (PR #1783)


0.21 (2023-05-01)
-----------------

- Add PEP621/631 support.
  (Issue #1647)
- Exposed matplotlib unit formatter (PR #1703)
- Fix error when when re-registering a formatter.
  (PR #1629)
- Add new SI prefixes: ronna-, ronto-, quetta-, quecto-.
  (PR #1652)
- Fix unit check with `atol` using `np.allclose` & `np.isclose`.
  (Issue #1658)
- Implementation for numpy.positive added for Quantity.
  (PR #1663)
- Changed frequency to angular frequency in the docs.
  (PR #1668)
- Remove deprecated `alen` numpy function
  (PR #1678)
- Updated URLs for log and offset unit errors.
  (PR #1727)
- Patched TYPE_CHECKING import regression.
  (PR #1686)
- Parse '°' along with previous text, rather than adding a space,
  allowing, eg 'Δ°C' as a unit.
  (PR #1729)
- Improved escaping of special characters for LaTeX format
  (PR #1712)
- Avoid addition of spurious trailing zeros when converting units and non-int-type is
  Decimal (PR #1625).
- Implementation for numpy.delete added for Quantity.
  (PR #1669)
- Fixed Quantity type returned from `__dask_postcompute__`.
  (PR #1722)
- Added Townsend unit
  (PR #1738)
- Fix get_compatible_units() in dynamically added units.
  (Issue #1725)